[tool.poetry]
name = "starshipracer"
version = "0.1.0"
description = "Textbased space racing game."
authors = ["Ace Crash Pilot <acecrashpilot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
djangorestframework = "^3.12.2"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
coverage = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
